--- a/index.html
+++ b/index.html
@@ -211,6 +211,48 @@
                         </div>
                         <div class="tasks">
                             <h2 class="titleHead">Latest Tasks</h2>
+
+                            <div class="tasksContent">
+                                <div>
+                                    <div>
+                                        <h3>Record One New Video</h3>
+                                        <p>Record Python Create Exe Project</p>
+                                    </div>
+                                    <i class="fa-solid fa-trash"></i>
+                                </div>
+
+                                <div>
+                                    <div>
+                                        <h3>Write Article</h3>
+                                        <p>Write Low Level vs High Level Languages</p>
+                                    </div>
+                                    <i class="fa-solid fa-trash"></i>
+                                </div>
+
+                                <div>
+                                    <div>
+                                        <h3>Finish Project</h3>
+                                        <p>Publish Academy Programming Project</p>
+                                    </div>
+                                    <i class="fa-solid fa-trash"></i>
+                                </div>
+
+                                <div class="done">
+                                    <div>
+                                        <h3>Attend The Meeting</h3>
+                                        <p>Attend The Project Business Analysis Meeting</p>
+                                    </div>
+                                    <i class="fa-solid fa-trash"></i>
+                                </div>
+
+                                <div>
+                                    <div>
+                                        <h3>Finish Lesson</h3>
+                                        <p>Finish Teaching Flex Box</p>
+                                    </div>
+                                    <i class="fa-solid fa-trash"></i>
+                                </div>
+                            </div>
                         </div>
                         <div class="items">
                             <h2 class="titleHead">Top Search Items</h2>
