Top search items Section

--- a/index.html
+++ b/index.html
@@ -256,6 +256,31 @@
                         </div>
                         <div class="items">
                             <h2 class="titleHead">Top Search Items</h2>
+
+                            <div class="itemsContent">
+                                <div>
+                                    <span>Keyword</span>
+                                    <ul>
+                                        <li>Programing</li>
+                                        <li>JavaScript</li>
+                                        <li>PHP</li>
+                                        <li>Code</li>
+                                        <li>Design</li>
+                                        <li>Logic</li>
+                                    </ul>
+                                </div>
+                                <div>
+                                    <span>Search Count</span>
+                                    <ul>
+                                        <li>220</li>
+                                        <li>180</li>
+                                        <li>160</li>
+                                        <li>146</li>
+                                        <li>110</li>
+                                        <li>90</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </div>
                         <div class="uploads">
                             <h2 class="titleHead">Latest Uploads</h2>
