Latest uploads Section

--- a/index.html
+++ b/index.html
@@ -284,6 +284,74 @@
                         </div>
                         <div class="uploads">
                             <h2 class="titleHead">Latest Uploads</h2>
+
+                            <div class="uploadsContent">
+                                <div class="uploadsFile">
+                                    <div>
+                                        <img src="imags/pdf.svg" alt="pdf">
+                                        <div>
+                                            <h3>my-file.pdf</h3>
+                                            <p>Elzero</p>
+                                        </div>
+                                    </div>
+                                    <span>2.9mb</span>
+                                </div>
+
+                                <div class="uploadsFile">
+                                    <div>
+                                        <img src="imags/eps.svg" alt="eps">
+                                        <div>
+                                            <h3>My-Eps-File.pdf</h3>
+                                            <p>Designer</p>
+                                        </div>
+                                    </div>
+                                    <span>8.9mb</span>
+                                </div>
+
+                                <div class="uploadsFile">
+                                    <div>
+                                        <img src="imags/avi.svg" alt="avi">
+                                        <div>
+                                            <h3>My-Video-File.avi</h3>
+                                            <p>Admin</p>
+                                        </div>
+                                    </div>
+                                    <span>4.9mb</span>
+                                </div>
+
+                                <div class="uploadsFile">
+                                    <div>
+                                        <img src="imags/psd.svg" alt="psd">
+                                        <div>
+                                            <h3>My-Psd-File.pdf</h3>
+                                            <p>Black</p>
+                                        </div>
+                                    </div>
+                                    <span>4.5mb</span>
+                                </div>
+
+                                <div class="uploadsFile">
+                                    <div>
+                                        <img src="imags/zip.svg" alt="zip">
+                                        <div>
+                                            <h3>My-Zip-File.pdf</h3>
+                                            <p>User</p>
+                                        </div>
+                                    </div>
+                                    <span>8.9mb</span>
+                                </div>
+
+                                <div class="uploadsFile">
+                                    <div>
+                                        <img src="imags/dll.svg" alt="dll">
+                                        <div>
+                                            <h3>My-DLL-File.pdf</h3>
+                                            <p>Admin</p>
+                                        </div>
+                                    </div>
+                                    <span>4.9mb</span>
+                                </div>
+                            </div>
                         </div>
                         <div class="progress">
                             <h2 class="titleHead">Last Project Progress</h2>
