Last Project progress Section

--- a/index.html
+++ b/index.html
@@ -354,7 +354,44 @@
                             </div>
                         </div>
                         <div class="progress">
+                            <img src="imags/project.png" alt="project">
                             <h2 class="titleHead">Last Project Progress</h2>
+
+                            <div class="progressContent">
+                                <div class="line"></div>
+                                <ul>
+                                    <li>
+                                        <div>
+                                            <div class="progFinsh"></div>
+                                        </div>
+                                        <p>Got The Project</p>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <div class="progFinsh"></div>
+                                        </div>
+                                        <p>Started The Project</p>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <div class="progFinsh"></div>
+                                        </div>
+                                        <p>The Project About To Finish</p>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <div class="progFinsh progWaiting"></div>
+                                        </div>
+                                        <p>Test The Project</p>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <div></div>
+                                        </div>
+                                        <p>Finish The Project & Get Money</p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="reminders">
                             <h2 class="titleHead">Reminders</h2>
