Social Media Stats Section

--- a/index.html
+++ b/index.html
@@ -465,6 +465,48 @@
                         </div>
                         <div class="smState">
                             <h2 class="titleHead">Social Media Stats</h2>
+
+                            <div class="smStateContent">
+                                <div class="sm">
+                                    <div>
+                                        <div class="smIcon">
+                                            <i class="fa-brands fa-twitter"></i>
+                                        </div>
+                                        <span>90K Followers</span>
+                                    </div>
+                                    <button>Follow</button>
+                                </div>
+
+                                <div class="sm">
+                                    <div>
+                                        <div class="smIcon">
+                                            <i class="fa-brands fa-facebook-f"></i>
+                                        </div>
+                                        <span>2M Like</span>
+                                    </div>
+                                    <button>Like</button>
+                                </div>
+
+                                <div class="sm">
+                                    <div>
+                                        <div class="smIcon">
+                                            <i class="fa-brands fa-youtube"></i>
+                                        </div>
+                                        <span>1M Subs</span>
+                                    </div>
+                                    <button>Subscribe</button>
+                                </div>
+
+                                <div class="sm">
+                                    <div>
+                                        <div class="smIcon">
+                                            <i class="fa-brands fa-linkedin-in"></i>
+                                        </div>
+                                        <span>70K Followers</span>
+                                    </div>
+                                    <button>Follow</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="projects"></div>
