Security Info section

--- a/settings.html
+++ b/settings.html
@@ -104,7 +104,24 @@
                         <h2 class="titleHead">General Info</h2>
                         <p class="parHead">General Information About Your Account</p>
 
-                        <div class="generalContent"></div>
+                        <div class="generalContent">
+
+                            <div>
+                                <label for="fn">First Name</label>
+                                <input type="text" id="fn" placeholder="First Name">
+                            </div>
+
+                            <div>
+                                <label for="ln">Last Name</label>
+                                <input type="text" id="ln" placeholder="Last Name">
+                            </div>
+
+                            <div>
+                                <label for="em">Email</label>
+                                <input id="em" type="text" placeholder="Mo@black.com" disabled>
+                                <span>Change</span>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="secInfo">
