Security info Section

--- a/settings.html
+++ b/settings.html
@@ -128,7 +128,48 @@
                         <h2 class="titleHead">Security Info</h2>
                         <p class="parHead">Security Information About Your Account</p>
 
-                        <div class="secContent"></div>
+                        <div class="secContent">
+
+                            <div>
+                                <div>
+                                    <h3>Password</h3>
+                                    <p>Last Change On 25/10/2021</p>
+                                </div>
+                                <span>Change</span>
+                            </div>
+
+                            <div>
+                                <div>
+                                    <h3>Two-Factor Authentication</h3>
+                                    <p>Enable/Disable The Feature</p>
+                                </div>
+
+                                <div class="openCloseControl">
+                                    <input type="checkbox" checked>
+                                    <div>
+                                        <label>
+                                            <input class="toggle-checkbox" type="checkbox" checked="">
+                                            <div class="toggle-switch">
+                                                <div>
+                                                    <i class="fa-solid fa-check now"></i>
+                                                    <i class="fa-solid fa-xmark"></i>
+                                                </div>
+                                            </div>
+                                        </label>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <div>
+                                <div>
+                                    <h3>Devices</h3>
+                                    <p>Check The Login Devices List</p>
+                                </div>
+                                <span>Devices</span>
+                            </div>
+
+                        </div>
                     </div>
 
                     <div class="socInfo">
