Social info Section

--- a/settings.html
+++ b/settings.html
@@ -176,7 +176,29 @@
                         <h2 class="titleHead">Social Info</h2>
                         <p class="parHead">Social Media Information</p>
 
-                        <div class="socContent"></div>
+                        <div class="socContent">
+
+                            <div>
+                                <i id="ii" class="fa-brands fa-twitter"></i>
+                                <input type="text" placeholder="Twitter Username">
+                                <label for="ii"></label>
+                            </div>
+
+                            <div>
+                                <i class="fa-brands fa-facebook-f"></i>
+                                <input type="text" placeholder="Facebook Username">
+                            </div>
+
+                            <div>
+                                <i class="fa-brands fa-linkedin-in"></i>
+                                <input type="text" placeholder="Linkedin Username">
+                            </div>
+
+                            <div>
+                                <i class="fa-brands fa-youtube"></i>
+                                <input type="text" placeholder="Youtube Username">
+                            </div>
+                        </div>
                     </div>
 
                     <div class="widControl">
