Widgets control Section

--- a/settings.html
+++ b/settings.html
@@ -205,7 +205,44 @@
                         <h2 class="titleHead">Widgets Control</h2>
                         <p class="parHead">Show/Hide Widgets</p>
                         
-                        <div class="widContent"></div>
+                        <div class="widContent">
+
+                            <div>
+                                <input id="QuickDraft" type="checkbox" checked>
+                                <i class="fa-solid fa-check"></i>
+                                <label for="QuickDraft">Quick Draft</label>
+                            </div>
+
+                            <div>
+                                <input id="YearlyTargets" type="checkbox" checked>
+                                <i class="fa-solid fa-check"></i>
+                                <label for="YearlyTargets">Yearly Targets</label>
+                            </div>
+
+                            <div>
+                                <input id="TicketsStatistics" type="checkbox" checked>
+                                <i class="fa-solid fa-check"></i>
+                                <label for="TicketsStatistics">Tickets Statistics</label>
+                            </div>
+
+                            <div>
+                                <input id="LatestNews" type="checkbox" checked>
+                                <i class="fa-solid fa-check"></i>
+                                <label for="LatestNews">Latest News</label>
+                            </div>
+
+                            <div>
+                                <input id="LatestTasks" type="checkbox">
+                                <i class="fa-solid fa-check"></i>
+                                <label for="LatestTasks">Latest Tasks</label>
+                            </div>
+
+                            <div>
+                                <input id="TopSearchItems" type="checkbox" checked>
+                                <i class="fa-solid fa-check"></i>
+                                <label for="TopSearchItems">Top Search Items</label>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="backupManger">
